--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.search-books-bar {
+.search-restaurants-bar {
   position: fixed;
   width: 100%;
   top: 0;
@@ -12,12 +12,12 @@
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
 }
 
-.search-books-input-wrapper {
+.search-restaurants-input-wrapper {
   flex: 1;
   background: #e9e;
 }
 
-.search-books-bar input {
+.search-restaurants-bar input {
   width: 100%;
   padding: 15px 10px;
   font-size: 1.25em;
@@ -28,4 +28,9 @@
 .mapa
 {
   height: "20vh"
+}
+
+.sidebar
+{
+  width:"100px"
 }
